samples/_failures_safe/1761247206_0f5113_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6574840a.c: In function ‘print_token’:
./samples/SAFE/__tmp_6574840a.c:181:12: error: missing terminating " character
  181 |     printf("Line %d
      |            ^~~~~~~~
./samples/SAFE/__tmp_6574840a.c:181:5: error: expected expression at end of input
  181 |     printf("Line %d
      |     ^~~~~~
./samples/SAFE/__tmp_6574840a.c:181:5: error: expected declaration or statement at end of input
